[gd_scene load_steps=4 format=3 uid="uid://lbsd2hsigwh1"]

[ext_resource type="Texture2D" uid="uid://b6ldmfs2qf26i" path="res://Textures/GUI/next_wave_notif_bubble.png" id="1_h1tgc"]
[ext_resource type="Script" path="res://GUI/next_wave_notif.gd" id="1_qf5ew"]
[ext_resource type="Texture2D" uid="uid://djcfrmd5igfgt" path="res://Textures/GUI/money_icon.png" id="3_rs50y"]

[node name="NextWaveNotif" type="Control"]
modulate = Color(1, 1, 1, 0.513726)
self_modulate = Color(1, 1, 1, 0.541176)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qf5ew")

[node name="Bubble" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -62.0
offset_top = -54.0
offset_right = 66.0
offset_bottom = 74.0
scale = Vector2(1.714, 1.714)
pivot_offset = Vector2(62, 54)
texture = ExtResource("1_h1tgc")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -31.0
offset_top = -60.0
offset_right = 32.0
offset_bottom = 3.0
texture = ExtResource("3_rs50y")
expand_mode = 1

[node name="BonusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -54.0
offset_top = -16.0
offset_right = 57.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextWaveNotif" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = -82.0
offset_top = -74.0
offset_right = 26.0
offset_bottom = 29.0
scale = Vector2(1.5, 1.5)

[node name="BonusTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="pressed" from="NextWaveNotif" to="." method="_on_next_wave_notif_pressed"]
[connection signal="timeout" from="BonusTimer" to="." method="_on_bonus_timer_timeout"]
